# editor

./: .clang-format  CMakeLists.txt  build.sh  compile_commands.json  compile_flags.txt  debug.sh  leak.sh  neovim.json  run.sh
.cache/clangd/index/: Editor.cpp.5B2438137BF8E22C.idx  Editor.hpp.5EC0735A3AC94E13.idx
include/: CMakeLists.txt  Editor.hpp
res/shaders/: basic.glsl  simple.frag.glsl  simple.frag.spv  simple.vert.glsl  simple.vert.spv
scripts/: compile_shader.sh  compile_shaders.sh
src/: CMakeLists.txt  Editor.cpp  FileView.cpp  Main.cpp  Result.hpp  VeApp.cpp  VeApp.hpp  VeDevice.cpp  VeDevice.hpp  VeModel.cpp  VeModel.hpp  VePipeline.cpp  VePipeline.hpp  VeSwapChain.cpp  VeSwapChain.hpp  VeWindow.cpp  VeWindow.hpp  editor.c
src.old/: Editor.cpp  FileView.cpp  VeApp.cpp  VeApp.hpp  VeModel.hpp  VePipeline.hpp  VeSwapChain.hpp  VeWindow.cpp
src/include/: CMakeLists.txt  Editor.hpp  FileView.hpp
tests/: CMakeLists.txt  Test1.cpp
